--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "url": "https://github.com/Tianying0902/TodoList-bakcend/issues"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
+    "mysql": "^2.18.1",
     "typescript": "^4.9.5"
   }
 }
