--- a/package.json
+++ b/package.json
@@ -20,5 +20,11 @@
     "express": "^4.18.2",
     "mysql": "^2.18.1",
     "typescript": "^4.9.5"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.17",
+    "@types/mysql": "^2.15.21",
+    "@types/node": "^18.14.6"
   }
 }
