--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "typescript and express",
   "main": "index.js",
   "scripts": {
+    "build": "tsc",
+    "start": "concurrently \"tsc -w\" \"nodemon dist/js/app.js\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -25,6 +27,8 @@
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/mysql": "^2.15.21",
-    "@types/node": "^18.14.6"
+    "@types/node": "^18.14.6",
+    "concurrently": "^7.6.0",
+    "nodemon": "^2.0.21"
   }
 }
