--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "todolist-backcend",
   "version": "1.0.0",
   "description": "typescript and express",
-  "main": "index.js",
+  "main": "app.ts",
   "scripts": {
     "build": "tsc",
     "start": "concurrently \"tsc -w\" \"nodemon dist/js/app.js\"",
