--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "tsc",
     "start": "concurrently \"tsc -w\" \"nodemon dist/js/app.js\"",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest src/tests/promise"
   },
   "repository": {
     "type": "git",
@@ -18,17 +18,24 @@
     "url": "https://github.com/Tianying0902/TodoList-bakcend/issues"
   },
   "dependencies": {
+    "concurrently": "^7.6.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "jest": "^29.5.0",
     "mysql": "^2.18.1",
+    "nodemon": "^2.0.21",
+    "supertest": "^6.3.3",
     "typescript": "^4.9.5"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/jest": "^29.4.0",
     "@types/mysql": "^2.15.21",
     "@types/node": "^18.14.6",
+    "@types/supertest": "^2.0.12",
     "concurrently": "^7.6.0",
+    "ts-jest": "^29.0.5",
     "nodemon": "^2.0.21"
   }
 }
